# shopping-game

./: .dockerignore  .envrc  .gitignore  CLAUDE.md  Dockerfile  README.md  flake.nix  manage.py  pyproject.toml  renovate.json
.github/: CLAUDE.md
.github/workflows/: ci.yaml  ci.yml  docker.yaml  docker.yml
manifests/shopping/: deployment.yaml  httproute.yaml  ingress.yaml  kustomization.yaml  migration-job.yaml  network-policy.yaml  pvc.yaml  service.yaml  statefulset.yaml
shopping_game/: asgi.py  settings.py  urls.py  wsgi.py
store/: admin.py  models.py  tests.py  urls.py  views.py
store/fixtures/: sample_items.json
store/migrations/: 0001_initial.py
store/templates/store/: base.html  change.html  checkout.html  pos.html  till.html
