[project]
name = "shopping-game"
version = "0.1.0"
description = "A shopping checkout role-playing game for kids"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.3",
    "pillow>=12.1.1",
    "gunicorn>=23.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shopping_game", "store"]

[dependency-groups]
dev = [
    "django>=6.0.3",
]

[tool.uv]
package = false

[tool.django]
settings-module = "shopping_game.settings"
